# mdlint

./: Cargo.toml  README.md  release.toml
.github/workflows/: release.yml
benches/: throughput.rs
src/: config.rs  file.rs  frontmatter.rs  headings.rs  lib.rs  links.rs  main.rs  report.rs  resolve.rs  workspace.rs
src/rules/: broken_links.rs  first_heading.rs  heading_increment.rs  mod.rs  orphan_pages.rs  require_frontmatter.rs
tests/: integration.rs
tests/fixtures/basic/: guide.md  index.md  mdlint.toml  no-frontmatter.md
