[package]
name = "mdlint"
version = "0.1.1"
edition = "2024"

[dependencies]
comrak = "0.36"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yml = "0.0.12"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
rayon = "1"
ignore = "0.4"
walkdir = "2"
serde_json = "1"
percent-encoding = "2"
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bench]]
name = "throughput"
harness = false
